--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,29 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body{
+    margin-top: 100px;
+}
+ul{
+    padding:0;
+    margin-bottom: 0;
+}
+ul li{
+    border: 1px solid grey;
+    list-style: none;
+    padding: 5px;
+}
+h1{
+    text-align: center;
+}
+input{
+    border: none;
+    width: 100%;
+}
+.faIcon{
+    margin-left: 2px;
+    
+}
+.faIcon:hover {
+    border: 1px solid #ff0000; /* Adjust the border properties as needed */
+  }
