--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,6 +26,9 @@ ul li{
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: -1px;
+    font-family: 'Dosis', sans-serif;
+    font-size: 20px;
+    color: #000;
 }
 h1{
     text-align: center;
